# Vapp

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/crack/vapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/lspc/: CMakeLists.txt  aliuhook.cpp  native-lib.cpp
app/src/main/cpp/lspc/Dobby/: CMakeLists.txt
app/src/main/cpp/lspc/lsp/: CMakeLists.txt
app/src/main/java/axml/xml/: Chunk.java  Resources.java
app/src/main/java/com/crack/vapp/: BaseData.java
app/src/main/java/com/crack/vapp/Utils/: AddDex.java  AddPluginResources.java  AndroidManifestParser.java  AppInfoUtils.java  FileUtil.java  PackageParser.java  ReflectUtils.java  lg.java
app/src/main/java/com/crack/vapp/core/: HookActivty.java  HookBroadcastReceiver.java  HookContentProvider.java  HookService.java  HookSoLoad.java  InstallApp.java  handle.java  lunchApplication.java
app/src/main/java/com/crack/vapp/service/: ProxyService.java
app/src/main/java/com/crack/vapp/test/: testActivity.java  testService.java
app/src/main/java/com/crack/vapp/ui/: AddAppActivity.java  HomeActivity.java  MyAppAdapter.java  ProxyActivity.java
app/src/main/java/de/robv/android/xposed/: CA_MethodHook.java  CA_MethodReplacement.java  CalvinBridge.java
app/src/main/res/layout/: activity_add_app.xml  activity_home.xml  activity_main.xml  item_app.xml  item_app_add.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/crack/vapp/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
